@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2014, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2015, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * --------------------
  * XYShapeRenderer.java
  * --------------------
- * (C) Copyright 2008-2014 by Andreas Haumer, xS+S and Contributors.
+ * (C) Copyright 2008-2015 by Andreas Haumer, xS+S and Contributors.
  *
  * Original Author:  Martin Hoeller (x Software + Systeme  xS+S - Andreas
  *                       Haumer);
@@ -40,6 +40,7 @@
  * 16-Feb-2010 : Added findZBounds() (patch 2952086) (MH);
  * 19-Oct-2011 : Fixed NPE in findRangeBounds() (bug 3026341) (DG);
  * 03-Jul-2013 : Use ParamChecks (DG);
+ * 09-Sep-2015 : Add update for crosshair (DG);
  *
  */
 
@@ -85,7 +86,7 @@ import org.jfree.util.ShapeUtilities;
  * connecting the shape to the edges of the plot.
  * <br><br>
  * The example shown here is generated by the
- * <code>XYShapeRendererDemo1.java</code> program included in the JFreeChart
+ * {@code XYShapeRendererDemo1.java} program included in the JFreeChart
  * demo collection:
  * <br><br>
  * <img src="../../../../../images/XYShapeRendererSample.png"
@@ -130,7 +131,7 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
     private transient Stroke guideLineStroke;
 
     /**
-     * Creates a new <code>XYShapeRenderer</code> instance with default
+     * Creates a new {@code XYShapeRenderer} instance with default
      * attributes.
      */
     public XYShapeRenderer() {
@@ -148,7 +149,7 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
     /**
      * Returns the paint scale used by the renderer.
      *
-     * @return The paint scale (never <code>null</code>).
+     * @return The paint scale (never {@code null}).
      *
      * @see #setPaintScale(PaintScale)
      */
@@ -160,7 +161,7 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
      * Sets the paint scale used by the renderer and sends a
      * {@link RendererChangeEvent} to all registered listeners.
      *
-     * @param scale  the scale (<code>null</code> not permitted).
+     * @param scale  the scale ({@code null} not permitted).
      *
      * @see #getPaintScale()
      */
@@ -171,8 +172,8 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
     }
 
     /**
-     * Returns <code>true</code> if outlines should be drawn for shapes, and
-     * <code>false</code> otherwise.
+     * Returns {@code true} if outlines should be drawn for shapes, and
+     * {@code false} otherwise.
      *
      * @return A boolean.
      *
@@ -200,11 +201,11 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
     }
 
     /**
-     * Returns <code>true</code> if the renderer should use the fill paint
-     * setting to fill shapes, and <code>false</code> if it should just
+     * Returns {@code true} if the renderer should use the fill paint
+     * setting to fill shapes, and {@code false} if it should just
      * use the regular paint.
      * <p>
-     * Refer to <code>XYLineAndShapeRendererDemo2.java</code> to see the
+     * Refer to {@code XYLineAndShapeRendererDemo2.java} to see the
      * effect of this flag.
      *
      * @return A boolean.
@@ -286,7 +287,7 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
     /**
      * Returns the paint used to draw the guide lines.
      *
-     * @return The paint (never <code>null</code>).
+     * @return The paint (never {@code null}).
      *
      * @see #setGuideLinePaint(Paint)
      */
@@ -298,7 +299,7 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
      * Sets the paint used to draw the guide lines and sends a
      * {@link RendererChangeEvent} to all registered listeners.
      *
-     * @param paint  the paint (<code>null</code> not permitted).
+     * @param paint  the paint ({@code null} not permitted).
      *
      * @see #getGuideLinePaint()
      */
@@ -323,7 +324,7 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
      * Sets the stroke used to draw the guide lines and sends a
      * {@link RendererChangeEvent} to all registered listeners.
      *
-     * @param stroke  the stroke (<code>null</code> not permitted).
+     * @param stroke  the stroke ({@code null} not permitted).
      *
      * @see #getGuideLineStroke()
      */
@@ -337,9 +338,9 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
      * Returns the lower and upper bounds (range) of the x-values in the
      * specified dataset.
      *
-     * @param dataset  the dataset (<code>null</code> permitted).
+     * @param dataset  the dataset ({@code null} permitted).
      *
-     * @return The range (<code>null</code> if the dataset is <code>null</code>
+     * @return The range ({@code null} if the dataset is {@code null}
      *         or empty).
      */
     @Override
@@ -360,9 +361,9 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
      * Returns the range of values the renderer requires to display all the
      * items from the specified dataset.
      *
-     * @param dataset  the dataset (<code>null</code> permitted).
+     * @param dataset  the dataset ({@code null} permitted).
      *
-     * @return The range (<code>null</code> if the dataset is <code>null</code>
+     * @return The range ({@code null} if the dataset is {@code null}
      *         or empty).
      */
     @Override
@@ -382,16 +383,15 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
     /**
      * Return the range of z-values in the specified dataset.
      *  
-     * @param dataset  the dataset (<code>null</code> permitted).
+     * @param dataset  the dataset ({@code null} permitted).
      * 
-     * @return The range (<code>null</code> if the dataset is <code>null</code>
+     * @return The range ({@code null} if the dataset is {@code null}
      *         or empty).
      */
     public Range findZBounds(XYZDataset dataset) {
         if (dataset != null) {
             return DatasetUtilities.findZBounds(dataset);
-        }
-        else {
+        } else {
             return null;
         }
     }
@@ -399,7 +399,7 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
     /**
      * Returns the number of passes required by this renderer.
      *
-     * @return <code>2</code>.
+     * @return {@code 2}.
      */
     @Override
     public int getPassCount() {
@@ -457,21 +457,18 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
                         dataArea.getMaxY()));
                 g2.draw(new Line2D.Double(dataArea.getMinX(), transX,
                         dataArea.getMaxX(), transX));
-            }
-            else {
+            } else {
                 g2.draw(new Line2D.Double(transX, dataArea.getMinY(), transX,
                         dataArea.getMaxY()));
                 g2.draw(new Line2D.Double(dataArea.getMinX(), transY,
                         dataArea.getMaxX(), transY));
             }
-        }
-        else if (pass == 1) {
+        } else if (pass == 1) {
             Shape shape = getItemShape(series, item);
             if (orientation == PlotOrientation.HORIZONTAL) {
                 shape = ShapeUtilities.createTranslatedShape(shape, transY,
                         transX);
-            }
-            else if (orientation == PlotOrientation.VERTICAL) {
+            } else if (orientation == PlotOrientation.VERTICAL) {
                 shape = ShapeUtilities.createTranslatedShape(shape, transX,
                         transY);
             }
@@ -492,6 +489,11 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
                     g2.draw(shape);
                 }
             }
+            
+            int domainAxisIndex = plot.getDomainAxisIndex(domainAxis);
+            int rangeAxisIndex = plot.getRangeAxisIndex(rangeAxis);
+            updateCrosshairValues(crosshairState, x, y, domainAxisIndex,
+                    rangeAxisIndex, transX, transY, orientation);
 
             // add an entity for the item...
             if (entities != null) {
@@ -504,7 +506,7 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
     /**
      * Get the paint for a given series and item from a dataset.
      *
-     * @param dataset  the dataset..
+     * @param dataset  the dataset.
      * @param series  the series index.
      * @param item  the item index.
      *
@@ -515,8 +517,7 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
         if (dataset instanceof XYZDataset) {
             double z = ((XYZDataset) dataset).getZValue(series, item);
             p = this.paintScale.getPaint(z);
-        }
-        else {
+        } else {
             if (this.useFillPaint) {
                 p = getItemFillPaint(series, item);
             }
@@ -529,15 +530,15 @@ public class XYShapeRenderer extends AbstractXYItemRenderer
 
     /**
      * Tests this instance for equality with an arbitrary object.  This method
-     * returns <code>true</code> if and only if:
+     * returns {@code true} if and only if:
      * <ul>
-     * <li><code>obj</code> is an instance of <code>XYShapeRenderer</code> (not
-     *     <code>null</code>);</li>
-     * <li><code>obj</code> has the same field values as this
-     *     <code>XYShapeRenderer</code>;</li>
+     * <li>{@code obj} is an instance of {@code XYShapeRenderer} (not
+     *     {@code null});</li>
+     * <li>{@code obj} has the same field values as this
+     *     {@code XYShapeRenderer};</li>
      * </ul>
      *
-     * @param obj  the object (<code>null</code> permitted).
+     * @param obj  the object ({@code null} permitted).
      *
      * @return A boolean.
      */
